# ByteOS

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: memory.h  process.h  semaph.h  types.h  utils.h
process/: process.h
process/utils/: list.h
src/kernel/: kernel.c  kernel.h
src/memory/: memory.c  memory.h
src/process/: process.c  process.h
src/semaphore/: semaph.c  semaph.h
src/utils/: list.c  list.h  utils.c
synthetic_programs/: sint2
utils/: list.c
